add office chair - fix mdx v3

--- a/app/content/categories/officechair.mdx
+++ b/app/content/categories/officechair.mdx
@@ -13,18 +13,18 @@ priceRanges: {
 
 ## Products
 
-| Brand           | Model                               | Price (USD) | Price Tier | Why It's BIFL | Warranty Information | User Reviews Summary | Link |
-|-----------------|-------------------------------------|-------------|------------|---------------|----------------------|----------------------|------|
-| HON             | Ignition 2.0                        | $458        | $          | Well-made with adjustable lumbar support and synchro-tilt recline. Comfortable and sturdy with great back support. | 5-year limited warranty | Average rating of 3.6 stars. Comfortable and sturdy with great back support. Some customers found assembly difficult. | [Amazon](https://www.amazon.com/dp/B0CZBJ5JCW) |
-| Steelcase       | Series 1                            | $499        | $          | 12-year warranty, comfortable and ergonomic, breathable mesh back, adjustable lumbar support, LiveBack technology. | 12-year, multi-shift, 24/7 parts and labor warranty | Decent all-around chair, comfortable and ergonomic with good ventilation. Armrests could be improved. | [Amazon](https://www.amazon.com/dp/B078H9VXFD) |
-| Steelcase       | Leap V2                             | $1,300      | $$ / $$$$  | 12-year warranty, highly ergonomic design, extensive adjustability, durable with a breathable backrest, LiveBack technology, Natural Glide System™. | 12-year, multi-shift, 24/7 parts and labor warranty | Highly adjustable and comfortable, with good back support. | [Amazon](https://www.amazon.com/s?k=steelcase+leap+v2) |
-| Herman Miller   | Embody                              | $1,464      | $$$ / $$$$ | 12-year warranty, high-end build quality, advanced technology, comfortable and supportive, pixelated support technology, flexible and adjustable, Backfit™ adjustment. | 12-year warranty | Comfortable and supportive with a unique design. Some users find the armrests clunky. | [Amazon](https://www.amazon.com/s?k=herman+miller+embody) |
-| Herman Miller   | Aeron                               | $1,316      | $$$        | 12-year warranty, high-end build quality, comfortable and supportive, 8Z Pellicle suspension, adjustable PostureFit SL, environmentally friendly. | 12-year warranty | Comfortable and supportive with good airflow. Seat may be too firm for some. | [Amazon](https://www.amazon.com/s?k=herman+miller+aeron) |
-| IKEA            | Markus                              | $399        | $          | 10-year warranty, comfortable and supportive, breathable mesh back, adjustable height and angle, safety casters, built-in lumbar support. | 10-year warranty | Comfortable and affordable, but build quality may not be the best. Armrests are not adjustable. | [IKEA](https://www.ikea.com/us/en/p/markus-office-chair-vissle-dark-gray-70261150/) |
-| Haworth         | Fern                                | $1,500      | $$$$       | Highly adjustable and comfortable, with a soft and supportive backrest. | 12-year warranty | Comfortable with a unique design and good lumbar support. | [Haworth](https://www.haworth.com/na/en/products/office-chairs/fern.html) |
-| Steelcase       | Gesture                             | $1,399      | $$$        | Highly adjustable and sturdy, with versatile armrests that accommodate different tasks. | 12-year, multi-shift, 24/7 parts and labor warranty | Comfortable and supportive, with a wide range of adjustments. | [Amazon](https://www.amazon.com/s?k=steelcase+gesture) |
-| HON             | Ignition 2.0 (with headrest)        | $851        | $$         | Adjustable lumbar support, synchro-tilt recline, and a headrest for added comfort. | 5-year limited warranty | Comfortable and supportive with good adjustability. | [Amazon](https://www.amazon.com/dp/B0CZBJ5JCW) |
-| Autonomous      | ErgoChair 2                         | $469        | $          | Extensive ergonomic adjustments and a modern look. | - | Comfortable and adjustable, with a modern design. | [Autonomous](https://www.autonomous.ai/office-chairs/ergochair-2) |
-| Branch          | Ergonomic Chair                     | $329        | $          | Sturdy lumbar support and smooth adjustability. | 7-year warranty | Comfortable and supportive, with a simple design. Seat may be too firm for some. | [Branch](https://www.branchfurniture.com/products/ergonomic-chair) |
-| Sihoo           | Doro C300                           | $300        | $          | Comfortable for long hours, with good ergonomic support. | - | Comfortable and supportive, with a focus on ergonomics. | [Amazon](https://www.amazon.com/s?k=sihoo+doro+c300) |
-| XChair          | X1                                  | -           | -          | Offers good back support with a pronounced lumbar support system. | - | Comfortable and supportive, with a flexible design. | [XChair](https://www.xchair.com/x1-office-chair.html) |
+| Product Name | Price Tier | Price Range | Why It's BIFL | Link |
+|--------------|------------|-------------|---------------|------|
+| HON Ignition 2.0 | $ | $458 | Well-made with adjustable lumbar support and synchro-tilt recline. Comfortable and sturdy with great back support. | [Amazon](https://www.amazon.com/dp/B0CZBJ5JCW) |
+| Steelcase Series 1 | $ | $499 | 12-year warranty, comfortable and ergonomic, breathable mesh back, adjustable lumbar support, LiveBack technology. | [Amazon](https://www.amazon.com/dp/B078H9VXFD) |
+| Steelcase Leap V2 | $$ / $$$$ | $1,300 | 12-year warranty, highly ergonomic design, extensive adjustability, durable with a breathable backrest, LiveBack technology, Natural Glide System™. | [Amazon](https://www.amazon.com/s?k=steelcase+leap+v2) |
+| Herman Miller Embody | $$$ / $$$$ | $1,464 | 12-year warranty, high-end build quality, advanced technology, comfortable and supportive, pixelated support technology, flexible and adjustable, Backfit™ adjustment. | [Amazon](https://www.amazon.com/s?k=herman+miller+embody) |
+| Herman Miller Aeron | $$$ | $1,316 | 12-year warranty, high-end build quality, comfortable and supportive, 8Z Pellicle suspension, adjustable PostureFit SL, environmentally friendly. | [Amazon](https://www.amazon.com/s?k=herman+miller+aeron) |
+| IKEA Markus | $ | $399 | 10-year warranty, comfortable and supportive, breathable mesh back, adjustable height and angle, safety casters, built-in lumbar support. | [IKEA](https://www.ikea.com/us/en/p/markus-office-chair-vissle-dark-gray-70261150/) |
+| Haworth Fern | $$$$ | $1,500 | Highly adjustable and comfortable, with a soft and supportive backrest. | [Haworth](https://www.haworth.com/na/en/products/office-chairs/fern.html) |
+| Steelcase Gesture | $$$ | $1,399 | Highly adjustable and sturdy, with versatile armrests that accommodate different tasks. | [Amazon](https://www.amazon.com/s?k=steelcase+gesture) |
+| HON Ignition 2.0 (with headrest) | $$ | $851 | Adjustable lumbar support, synchro-tilt recline, and a headrest for added comfort. | [Amazon](https://www.amazon.com/dp/B0CZBJ5JCW) |
+| Autonomous ErgoChair 2 | $ | $469 | Extensive ergonomic adjustments and a modern look. | [Autonomous](https://www.autonomous.ai/office-chairs/ergochair-2) |
+| Branch Ergonomic Chair | $ | $329 | Sturdy lumbar support and smooth adjustability. | [Branch](https://www.branchfurniture.com/products/ergonomic-chair) |
+| Sihoo Doro C300 | $ | $300 | Comfortable for long hours, with good ergonomic support. | [Amazon](https://www.amazon.com/s?k=sihoo+doro+c300) |
+| XChair X1 | - | - | Offers good back support with a pronounced lumbar support system. | [XChair](https://www.xchair.com/x1-office-chair.html) |
