--- a/app/content/categories/officechair.mdx
+++ b/app/content/categories/officechair.mdx
@@ -17,8 +17,8 @@ priceRanges: {
 |--------------|------------|-------------|---------------|------|
 | HON Ignition 2.0 | $ | $458 | Well-made with adjustable lumbar support and synchro-tilt recline. Comfortable and sturdy with great back support. | [Amazon](https://www.amazon.com/dp/B0CZBJ5JCW) |
 | Steelcase Series 1 | $ | $499 | 12-year warranty, comfortable and ergonomic, breathable mesh back, adjustable lumbar support, LiveBack technology. | [Amazon](https://www.amazon.com/dp/B078H9VXFD) |
-| Steelcase Leap V2 | $$ / $$$$ | $1,300 | 12-year warranty, highly ergonomic design, extensive adjustability, durable with a breathable backrest, LiveBack technology, Natural Glide System™. | [Amazon](https://www.amazon.com/s?k=steelcase+leap+v2) |
-| Herman Miller Embody | $$$ / $$$$ | $1,464 | 12-year warranty, high-end build quality, advanced technology, comfortable and supportive, pixelated support technology, flexible and adjustable, Backfit™ adjustment. | [Amazon](https://www.amazon.com/s?k=herman+miller+embody) |
+| Steelcase Leap V2 | $$$$ | $1,300 | 12-year warranty, highly ergonomic design, extensive adjustability, durable with a breathable backrest, LiveBack technology, Natural Glide System™. | [Amazon](https://www.amazon.com/s?k=steelcase+leap+v2) |
+| Herman Miller Embody | $$$$ | $1,464 | 12-year warranty, high-end build quality, advanced technology, comfortable and supportive, pixelated support technology, flexible and adjustable, Backfit™ adjustment. | [Amazon](https://www.amazon.com/s?k=herman+miller+embody) |
 | Herman Miller Aeron | $$$ | $1,316 | 12-year warranty, high-end build quality, comfortable and supportive, 8Z Pellicle suspension, adjustable PostureFit SL, environmentally friendly. | [Amazon](https://www.amazon.com/s?k=herman+miller+aeron) |
 | IKEA Markus | $ | $399 | 10-year warranty, comfortable and supportive, breathable mesh back, adjustable height and angle, safety casters, built-in lumbar support. | [IKEA](https://www.ikea.com/us/en/p/markus-office-chair-vissle-dark-gray-70261150/) |
 | Haworth Fern | $$$$ | $1,500 | Highly adjustable and comfortable, with a soft and supportive backrest. | [Haworth](https://www.haworth.com/na/en/products/office-chairs/fern.html) |
@@ -27,4 +27,4 @@ priceRanges: {
 | Autonomous ErgoChair 2 | $ | $469 | Extensive ergonomic adjustments and a modern look. | [Autonomous](https://www.autonomous.ai/office-chairs/ergochair-2) |
 | Branch Ergonomic Chair | $ | $329 | Sturdy lumbar support and smooth adjustability. | [Branch](https://www.branchfurniture.com/products/ergonomic-chair) |
 | Sihoo Doro C300 | $ | $300 | Comfortable for long hours, with good ergonomic support. | [Amazon](https://www.amazon.com/s?k=sihoo+doro+c300) |
-| XChair X1 | - | - | Offers good back support with a pronounced lumbar support system. | [XChair](https://www.xchair.com/x1-office-chair.html) |
+| XChair X1 | $$ | $789 | Offers good back support with a pronounced lumbar support system. | [XChair](https://www.xchair.com/x1-office-chair.html) |
