improve category page ui/ux v2

--- a/app/content/categories/kitchen.mdx
+++ b/app/content/categories/kitchen.mdx
@@ -15,5 +15,5 @@ priceRanges: {
 
 | Product Name | Price Tier | Price Range | Why It's BIFL | Link |
 |--------------|------------|-------------|---------------|------|
-| Lodge Cast Iron Skillet (12-inch) | $ | $20-30 | These skillets are virtually indestructible and only get better with age. The seasoning builds up over time, creating a natural non-stick surface. Lodge has been making these in the USA since 1896, and they're known for their excellent heat retention and even cooking. | [Amazon](#) |
-| Vitamix 5200 Blender | $$$ | $400-500 | The gold standard in blenders, Vitamix is known for their powerful motors and all-metal drive system. They offer a 7-year warranty and are built to last decades with proper care. Can handle everything from smoothies to hot soups. | [Amazon](#) | 
+| Lodge Cast Iron Skillet (12-inch) | $ | $20-30 | These skillets are virtually indestructible and only get better with age. The seasoning builds up over time, creating a natural non-stick surface. Lodge has been making these in the USA since 1896, and they're known for their excellent heat retention and even cooking. The thick cast iron construction means it can handle any heat source - from campfire to induction. With proper care (which is simple: hand wash, dry thoroughly, light oiling), it will last for generations. Many users report using skillets passed down from their grandparents that are still performing perfectly. | [Shop](#) |
+| Vitamix 5200 Blender | $$$ | $400-500 | The gold standard in blenders, Vitamix is renowned for their commercial-grade construction and reliability. The all-metal drive system eliminates the common failure points found in cheaper blenders. The 2.2HP motor is powerful enough to blend anything from smoothies to nut butters, and can even heat soup through friction. The 7-year warranty is exceptional, but these often last 15-20 years or more with proper care. The container is BPA-free and highly durable, while the hardened stainless-steel blades maintain their edge for years. The simple control system means fewer parts to break, and Vitamix's customer service is known for being extremely helpful if any issues arise. Many professional kitchens use these daily for decades. | [Shop](#) | 
