improve category page ui/ux v4

--- a/app/content/categories/knives.mdx
+++ b/app/content/categories/knives.mdx
@@ -2,7 +2,7 @@
 title: "Kitchen Knife"
 id: "kitchen-knife"
 description: "Durable and high-quality chef's knives built to last a lifetime."
-lastUpdated: "2025-02"
+lastUpdated: "2025-02-16"
 priceRanges: {
   "$": "Under $50",
   "$$": "$50-200",
