--- a/app/content/categories/officechair.mdx
+++ b/app/content/categories/officechair.mdx
@@ -2,7 +2,7 @@
 title: "Office Chairs"
 id: "office-chairs"
 description: "Durable and ergonomic office chairs designed for long-term use."
-lastUpdated: "2025-02"
+lastUpdated: "2025-02-16"
 priceRanges: {
   "$": "Under $500",
   "$$": "$500-1000",
