--- a/app/content/categories/knives.mdx
+++ b/app/content/categories/knives.mdx
@@ -15,10 +15,10 @@ priceRanges: {
 
 | Product Name | Price Tier | Price Range | Why It's BIFL | Link |
 |--------------|------------|-------------|---------------|------|
-| Victorinox Fibrox Pro Chef's Knife | $ | $45-70 | Durable, ergonomic, easy to sharpen, great value, often recommended for professional kitchens. | [Amazon](https://www.amazon.com/dp/B00WEHFU16) |
-| Mercer Culinary Renaissance 8-Inch Forged Chef's Knife | $ | $45-55 | Forged construction, comfortable handle, excellent balance, taper-ground edge, often used in culinary schools. | [Amazon](https://www.amazon.com/dp/B000PS1HS6) |
-| Zwilling J.A. Henckels Professional S 8-inch Chef's Knife | $$ | $99-175 | Forged construction, ice-hardened FRIODUR® blade, ergonomic handle, lifetime warranty, some models have a hollow edge design. | [Amazon](https://www.amazon.com/dp/B00004RFLI) |
-| Tojiro DP 8.2 in. Gyutoh Chef's Knife | $$ | $86-125 | Handcrafted in Japan, razor-sharp, well-balanced, durable, factory open to the public. | [Amazon](https://www.amazon.com/dp/B000UAPQGS) |
-| Shun Classic 8 in. Chef's Knife | $$ | $130-185 | Handcrafted in Japan, exceptional sharpness and edge retention, durable, beautiful Damascus pattern, lifetime sharpening service. | [Amazon](https://www.amazon.com/dp/B0000Y7KNQ) |
-| Miyabi Birchwood SG2 8.5 in. Gyutoh Chef's Knife | $$$ | $250-350 | Handcrafted in Japan, exceptional sharpness, beautiful design, durable, Cryodur ice-hardened blade, hammered finish. | [Amazon](https://www.amazon.com/dp/B00BKEO8Y2) |
-| Global G-2 8 in. Classic Chef's Knife | $$ | $100-160 | Lightweight, precisely balanced, razor-sharp edge, comfortable grip, designed by Komin Yamada. | [Amazon](https://www.amazon.com/dp/B00005OL44) |
+| Victorinox Fibrox Pro Chef's Knife | $ | $45 | Durable, ergonomic, easy to sharpen, great value, often recommended for professional kitchens. | [Amazon](https://www.amazon.com/dp/B00WEHFU16) |
+| Mercer Culinary Renaissance 8-Inch Forged Chef's Knife | $ | $45 | Forged construction, comfortable handle, excellent balance, taper-ground edge, often used in culinary schools. | [Amazon](https://www.amazon.com/dp/B000PS1HS6) |
+| Zwilling J.A. Henckels Professional S 8-inch Chef's Knife | $$ | $99 | Forged construction, ice-hardened FRIODUR® blade, ergonomic handle, lifetime warranty, some models have a hollow edge design. | [Amazon](https://www.amazon.com/dp/B00004RFLI) |
+| Tojiro DP 8.2 in. Gyutoh Chef's Knife | $$ | $86 | Handcrafted in Japan, razor-sharp, well-balanced, durable, factory open to the public. | [Amazon](https://www.amazon.com/dp/B000UAPQGS) |
+| Shun Classic 8 in. Chef's Knife | $$ | $130 | Handcrafted in Japan, exceptional sharpness and edge retention, durable, beautiful Damascus pattern, lifetime sharpening service. | [Amazon](https://www.amazon.com/dp/B0000Y7KNQ) |
+| Miyabi Birchwood SG2 8.5 in. Gyutoh Chef's Knife | $$$ | $250 | Handcrafted in Japan, exceptional sharpness, beautiful design, durable, Cryodur ice-hardened blade, hammered finish. | [Amazon](https://www.amazon.com/dp/B00BKEO8Y2) |
+| Global G-2 8 in. Classic Chef's Knife | $$ | $100 | Lightweight, precisely balanced, razor-sharp edge, comfortable grip, designed by Komin Yamada. | [Amazon](https://www.amazon.com/dp/B00005OL44) |
