fix office chair

--- a/app/content/categories/officechair.mdx
+++ b/app/content/categories/officechair.mdx
@@ -27,4 +27,4 @@ priceRanges: {
 | Autonomous ErgoChair 2 | $ | $469 | Extensive ergonomic adjustments and a modern look. | [Autonomous](https://www.autonomous.ai/office-chairs/ergochair-2) |
 | Branch Ergonomic Chair | $ | $329 | Sturdy lumbar support and smooth adjustability. | [Branch](https://www.branchfurniture.com/products/ergonomic-chair) |
 | Sihoo Doro C300 | $ | $300 | Comfortable for long hours, with good ergonomic support. | [Amazon](https://www.amazon.com/s?k=sihoo+doro+c300) |
-| XChair X1 | $$ | $789 | Offers good back support with a pronounced lumbar support system. | [XChair](https://www.xchair.com/x1-office-chair.html) |
+| XChair X1 | $$ | $656 | Offers good back support with a pronounced lumbar support system. | [XChair](https://www.xchair.com/products/x1-flex-mesh-office-chair) |
