improve seo and buywhoa

--- a/app/content/categories/backpack.mdx
+++ b/app/content/categories/backpack.mdx
@@ -13,7 +13,7 @@ priceRanges: {
 
 ## Products
 
-| Product Name | Price Tier | Price (USD) | Why It's BIFL | Link to Buy |
+| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
 |--------------|------------|-------------|---------------|-------------|
 | JanSport SuperBreak One Backpack | $ | $38 | Simple, durable construction with a lifetime warranty. Many users report using it for over 20 years. | [Amazon](https://www.amazon.com/dp/B003Q3UJJO) |
 | SHRRADOO Extra Large 50L Travel Laptop Backpack | $ | $30 | Large capacity with TSA-friendly design, USB charging port, and durable polyester construction. | [Amazon](https://www.amazon.com/dp/B0747LZ74D) |
