--- a/app/content/categories/cookware.mdx
+++ b/app/content/categories/cookware.mdx
@@ -13,7 +13,7 @@ priceRanges: {
 
 ## Products
 
-| Product Name | Price Tier | Price (USD) | Why It's BIFL | Link |
+| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link |
 |--------------|------------|-------------|---------------|------|
 | Lodge Cast Iron Skillet | $$ | $50 | Virtually indestructible and offering excellent heat retention, this skillet can be seasoned to a naturally non-stick surface and will last for generations. It's pre-seasoned and versatile for various cooking methods (stovetop, oven, grill). | [Amazon](https://www.amazon.com/dp/B00006JSUA) |
 | Lodge Blacklock Cast Iron Skillet | $$ | $90 | A lighter version of the classic Lodge skillet, this pan replicates antique cast iron with a triple seasoned, super nonstick surface. | [Amazon](https://www.amazon.com/dp/B07Z5J4RNJ) |
