--- a/app/content/categories/knives.mdx
+++ b/app/content/categories/knives.mdx
@@ -13,7 +13,7 @@ priceRanges: {
 
 ## Products
 
-| Product Name | Price Tier | Price Range | Why It's BIFL | Link |
+| Product Name | Price Tier | Price Range | Why It's BuyWhoa | Link |
 |--------------|------------|-------------|---------------|------|
 | Victorinox Fibrox Pro Chef's Knife | $ | $45 | Durable, ergonomic, easy to sharpen, great value, often recommended for professional kitchens. | [Amazon](https://www.amazon.com/dp/B00WEHFU16) |
 | Mercer Culinary Renaissance 8-Inch Forged Chef's Knife | $ | $45 | Forged construction, comfortable handle, excellent balance, taper-ground edge, often used in culinary schools. | [Amazon](https://www.amazon.com/dp/B000PS1HS6) |
