fix referral links

--- a/app/content/categories/cookware.mdx
+++ b/app/content/categories/cookware.mdx
@@ -15,15 +15,15 @@ priceRanges: {
 
 | Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link |
 |--------------|------------|-------------|---------------|------|
-| Lodge Cast Iron Skillet | $$ | $50 | Virtually indestructible and offering excellent heat retention, this skillet can be seasoned to a naturally non-stick surface and will last for generations. It's pre-seasoned and versatile for various cooking methods (stovetop, oven, grill). | [Amazon](https://www.amazon.com/dp/B00006JSUA) |
+| Lodge Cast Iron Skillet | $$ | $50 | Virtually indestructible and offering excellent heat retention, this skillet can be seasoned to a naturally non-stick surface and will last for generations. It's pre-seasoned and versatile for various cooking methods (stovetop, oven, grill). | [Amazon](https://amzn.to/41fEqNU) |
 | Lodge Blacklock Cast Iron Skillet | $$ | $90 | A lighter version of the classic Lodge skillet, this pan replicates antique cast iron with a triple seasoned, super nonstick surface. | [Amazon](https://www.amazon.com/dp/B07Z5J4RNJ) |
 | Field Company Cast Iron Skillet | $$$ | $165 | This skillet is lightweight, easy to maneuver, and built to last for generations. | [Field Company](https://fieldcompany.com/products/field-skillet) |
 | Stargazer Cast Iron Skillet | $$$ | $115 | Lightweight with an easy-pour edge, this skillet is extremely nonstick and easy to clean. | [Stargazer](https://stargazercastiron.com/) |
 | Smithey Ironware No. 10 Cast Iron Skillet | $$$ | $210 | A classic cast iron skillet with a smooth cooking surface, this skillet is known for its quality and durability. | [Smithey](https://smithey.com/products/no-10-cast-iron-skillet) |
 | Yeti 12-Inch Cast Iron Skillet | $$$ | $250 | A splurge-worthy cast iron skillet with a flat bottom that can be used on an induction cooktop as well as a gas range or traditional electric cooktop. | [Yeti](https://www.yeti.com/) |
-| Le Creuset Enameled Cast Iron Dutch Oven | $$$ | $380 | Renowned for its exceptional heat retention and distribution, this Dutch oven excels at braising, searing, roasting, and more. Its chip-resistant enamel finish makes it easy to clean and compatible with various cooktops. | [Amazon](https://www.amazon.com/dp/B00008GKDQ) |
+| Le Creuset Enameled Cast Iron Dutch Oven | $$$ | $380 | Renowned for its exceptional heat retention and distribution, this Dutch oven excels at braising, searing, roasting, and more. Its chip-resistant enamel finish makes it easy to clean and compatible with various cooktops. | [Amazon](https://amzn.to/41ipYob) |
 | KitchenAid 12-Inch Enameled Cast Iron Frying Pan | $$$ | $150 | After testing a slew of enameled cast iron skillets, experts named KitchenAid's 12-Inch Enameled Cast Iron Frying Pan their overall favorite. | [Amazon](https://www.amazon.com/dp/B07YX5N9W6) |
 | Caraway 10.5 Inch Enameled Cast Iron Skillet | $$$ | $135 | This skillet is so beautiful you'll probably want to display it on the stove while not in use. | [Caraway](https://www.carawayhome.com/products/mini-duo) |
 | All-Clad D3 Stainless Cookware | $$$ | $300 | Made in the USA with responsive tri-ply construction, this cookware offers even heating and exceptional durability. | [Amazon](https://www.amazon.com/dp/B005H8KD6I) |
 | Demeyere Industry 5 Cookware | $$$ | $400 | Belgian-made with a 5-ply construction and no interior rivets for easy cleaning, this cookware offers superior heat distribution and durability. | [Demeyere](https://www.surlatable.com/demeyere-industry5/) |
-| De Buyer Carbon Steel Pan | $$ | $80 | Carbon steel pans have the durability of cast iron with a smoother, glassier surface. Extremely maneuverable, very durable, and naturally nonstick. | [Amazon](https://www.amazon.com/dp/B00462QP1G) |
+| De Buyer Carbon Steel Pan | $$ | $80 | Carbon steel pans have the durability of cast iron with a smoother, glassier surface. Extremely maneuverable, very durable, and naturally nonstick. | [Amazon](https://amzn.to/3X7cHN0) |
