--- a/app/content/categories/tableware.mdx
+++ b/app/content/categories/tableware.mdx
@@ -13,11 +13,11 @@ priceRanges: {
 
 ## Products
 
-| Product Name | Price Tier | Price (USD) | Why It's BIFL | Link to Buy |
+| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
 |--------------|------------|-------------|---------------|-------------|
-| Gibson Home Oslo Porcelain Dinnerware Set | $ | $12.12 | Durable porcelain construction, classic design, chip and scratch resistant, dishwasher and microwave safe. | [Amazon](https://www.amazon.com/dp/B09V33191P) |
-| Gibson Soho Lounge Round Reactive Glaze Stoneware Dinnerware Set | $ | $9.75 | Durable stoneware with a unique reactive glaze finish, making each piece one-of-a-kind. Dishwasher and microwave safe. | [Amazon](https://www.amazon.com/dp/B07FPNJG8G) |
-| Amazon Basics 18-Piece White Dinnerware Set | $ | $6.66 | Simple, classic design at an affordable price. Durable stoneware, dishwasher and microwave safe. | [Amazon](https://www.amazon.com/dp/B071D7M5QH) |
+| Gibson Home Oslo Porcelain Dinnerware Set | $ | $12.12 | Durable porcelain construction, classic design, chip and scratch resistant, dishwasher and microwave safe. | [Amazon](https://www.amazon.com/dp/B09V33191P/ref=nosim?tag=buywhoa-20) |
+| Gibson Soho Lounge Round Reactive Glaze Stoneware Dinnerware Set | $ | $9.75 | Durable stoneware with a unique reactive glaze finish, making each piece one-of-a-kind. Dishwasher and microwave safe. | [Amazon](https://www.amazon.com/dp/B07FPNJG8G/ref=nosim?tag=buywhoa-20) |
+| Amazon Basics 18-Piece White Dinnerware Set | $ | $6.66 | Simple, classic design at an affordable price. Durable stoneware, dishwasher and microwave safe. | [Amazon](https://www.amazon.com/dp/B071D7M5QH/ref=nosim?tag=buywhoa-20) |
 | American Atelier 16pc Stoneware Two-Tone Dinnerware Set | $ | $10.87 | Modern two-tone design in durable stoneware. Dishwasher and microwave safe. | [Target](https://www.target.com/p/american-atelier-16pc-stoneware-two-tone-dinnerware-set-white-green/-/A-81835333) |
 | World Market Ceramic Stacked 12 Piece Dinnerware Set | $ | $4.99 | Affordable, space-saving design, stackable, dishwasher and microwave safe. | [World Market](https://www.worldmarket.com/product/ceramic+stacked+12+piece+dinnerware+set.do) |
 | Lenox French Perle Dinnerware Set | $$ | $75-100 | Elegant beaded design, durable porcelain construction, lifetime breakage replacement. Dishwasher and microwave safe. | [Lenox](https://www.lenox.com/collections/dinnerware-sets/products/french-perle-grove-4-piece-place-setting) |
