--- a/app/content/categories/backpack.mdx
+++ b/app/content/categories/backpack.mdx
@@ -15,9 +15,9 @@ priceRanges: {
 
 | Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
 |--------------|------------|-------------|---------------|-------------|
-| JanSport SuperBreak One Backpack | $ | $38 | Simple, durable construction with a lifetime warranty. Many users report using it for over 20 years. | [Amazon](https://www.amazon.com/dp/B003Q3UJJO) |
-| SHRRADOO Extra Large 50L Travel Laptop Backpack | $ | $30 | Large capacity with TSA-friendly design, USB charging port, and durable polyester construction. | [Amazon](https://www.amazon.com/dp/B0747LZ74D) |
-| YOREPEK Travel Backpack | $ | $38 | 50L capacity, water-resistant, TSA-friendly design with multiple compartments for organization. | [Amazon](https://www.amazon.com/dp/B07D3QP76B) |
+| JanSport SuperBreak One Backpack | $ | $38 | Simple, durable construction with a lifetime warranty. Many users report using it for over 20 years. | [Amazon](https://www.amazon.com/dp/B003Q3UJJO/ref=nosim?tag=buywhoa-20) |
+| SHRRADOO Extra Large 50L Travel Laptop Backpack | $ | $30 | Large capacity with TSA-friendly design, USB charging port, and durable polyester construction. | [Amazon](https://www.amazon.com/dp/B0747LZ74D/ref=nosim?tag=buywhoa-20) |
+| YOREPEK Travel Backpack | $ | $38 | 50L capacity, water-resistant, TSA-friendly design with multiple compartments for organization. | [Amazon](https://www.amazon.com/dp/B07D3QP76B/ref=nosim?tag=buywhoa-20) |
 | Targus Legend IQ Backpack | $$ | $50 | Dedicated laptop compartment, tablet sleeve, and organized pockets, backed by a limited lifetime warranty. | [Best Buy](https://www.bestbuy.com/site/targus-legend-iq-backpack-black/4674557.p?skuId=4674557) |
 | Solo New York Duane Hybrid Briefcase Backpack | $$ | $46 | Convertible design from briefcase to backpack, padded laptop compartment, durable build with a 5-year warranty. | [Best Buy](https://www.bestbuy.com/site/solo-new-york-duane-hybrid-briefcase-backpack-for-15-6-laptop-gray/3972016.p?skuId=3972016) |
 | Vessel PrimeX Backpack | $$$$ | $265 | Premium golf backpack with multiple compartments, ergonomic design, and high-quality craftsmanship. | [Vessel](https://vesselgolf.com/collections/backpacks) |
