--- a/app/content/categories/watterbottle.mdx
+++ b/app/content/categories/watterbottle.mdx
@@ -13,11 +13,11 @@ priceRanges: {
 
 ## Products
 
-| Product Name | Price Tier | Price (USD) | Why It's BIFL | Link to Buy |
+| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
 |--------------|------------|-------------|---------------|-------------|
-| Nalgene Wide Mouth Sustain 32 oz | $ | $16.99 | Durable, BPA/BPS-free, made from 50% recycled plastic, lightweight, and dishwasher safe. Compatible with most water filtration devices. | [Amazon](https://www.amazon.com/dp/B000FDRX1W) |
-| CamelBak Eddy+ Stainless Steel Vacuum-Insulated 32 oz | $$ | $35.00 | Leak-proof, spill-proof, vacuum insulated, comfortable carry handle, flip-up straw for easy drinking, designed for one-handed use. | [Amazon](https://www.amazon.com/dp/B08CZ97WCS) |
-| Hydro Flask Wide Mouth Bottle | $$ | $50.00 | Double-wall vacuum insulation keeps drinks cold for up to 24 hours and hot for 12 hours, durable stainless steel construction, dishwasher safe, lifetime warranty. | [Amazon](https://www.amazon.com/dp/B01GW2GNDE) |
-| YETI Rambler Chug Water Bottle | $$ | $40.00 | Rugged stainless steel bottle designed for adventure, double-wall vacuum insulation, dishwasher safe, chug-style cap for easy drinking. | [Amazon](https://www.amazon.com/dp/B07XNYZ2N8) |
-| S'well Explorer with Flip Straw Lid 32oz | $$$ | $45.00 | Triple-layered vacuum insulation keeps drinks cold for up to 42 hours, ergonomic handle, leakproof when closed, stylish design. | [Amazon](https://www.amazon.com/dp/B0DHLCDF5S) |
-| Larq Bottle PureVis | $$$$ | $99.00 | High-tech self-cleaning and water filtration using UV-C light, eliminates bacteria and viruses, removes lead, chlorine, and other impurities. | [Amazon](https://www.amazon.com/dp/B0BGFZH5DZ) |
+| Nalgene Wide Mouth Sustain 32 oz | $ | $16.99 | Durable, BPA/BPS-free, made from 50% recycled plastic, lightweight, and dishwasher safe. Compatible with most water filtration devices. | [Amazon](https://www.amazon.com/dp/B000FDRX1W/ref=nosim?tag=buywhoa-20) |
+| CamelBak Eddy+ Stainless Steel Vacuum-Insulated 32 oz | $$ | $35.00 | Leak-proof, spill-proof, vacuum insulated, comfortable carry handle, flip-up straw for easy drinking, designed for one-handed use. | [Amazon](https://www.amazon.com/dp/B08CZ97WCS/ref=nosim?tag=buywhoa-20) |
+| Hydro Flask Wide Mouth Bottle | $$ | $50.00 | Double-wall vacuum insulation keeps drinks cold for up to 24 hours and hot for 12 hours, durable stainless steel construction, dishwasher safe, lifetime warranty. | [Amazon](https://www.amazon.com/dp/B01GW2GNDE/ref=nosim?tag=buywhoa-20) |
+| YETI Rambler Chug Water Bottle | $$ | $40.00 | Rugged stainless steel bottle designed for adventure, double-wall vacuum insulation, dishwasher safe, chug-style cap for easy drinking. | [Amazon](https://www.amazon.com/dp/B07XNYZ2N8/ref=nosim?tag=buywhoa-20) |
+| S'well Explorer with Flip Straw Lid 32oz | $$$ | $45.00 | Triple-layered vacuum insulation keeps drinks cold for up to 42 hours, ergonomic handle, leakproof when closed, stylish design. | [Amazon](https://www.amazon.com/dp/B0DHLCDF5S/ref=nosim?tag=buywhoa-20) |
+| Larq Bottle PureVis | $$$$ | $99.00 | High-tech self-cleaning and water filtration using UV-C light, eliminates bacteria and viruses, removes lead, chlorine, and other impurities. | [Amazon](https://www.amazon.com/dp/B0BGFZH5DZ/ref=nosim?tag=buywhoa-20) |
