--- a/app/content/categories/officedesk.mdx
+++ b/app/content/categories/officedesk.mdx
@@ -1,22 +1,24 @@
 ---
 title: "Office Desks"
 id: "office-desks"
-description: "Durable and high-quality office desks built to last a lifetime."
+description: "Durable and high-quality desks built to last a lifetime."
 lastUpdated: "2025-02"
 priceRanges: {
   "$": "Under $200",
   "$$": "$200-500",
-  "$$$": "$500-1000",
-  "$$$$": "$1000+"
+  "$$$": "$500-800",
+  "$$$$": "$800+"
 }
 ---
 
 ## Products
 
-| Product Name | Price Tier | Price (USD) | Why It's BIFL | Link to Buy |
-|--------------|------------|-------------|---------------|-------------|
-| IKEA Idasen Adjustable Standing Desk Frame | $$ | $400 | Sturdy metal frame providing a durable foundation for a customizable desk. Pair it with a solid hardwood butcher block countertop for longevity. Adjustable height ensures ergonomic comfort. | [IKEA](https://www.ikea.com/us/en/p/idasen-desk-sit-stand-black-dark-gray-s69303494/) |
-| Secretlab Magnus Pro Gaming Desk | $$$ | $799 | Built for gamers but suitable for any demanding user, featuring robust construction and high-quality materials for durability. Exceptional cable management and accessories enhance usability. | [Secretlab](https://secretlab.co/products/magnus-pro) |
-| Legare Furniture Solid Wood Desk | $$$ | $600 | Crafted from hardwoods like maple and oak with heirloom-quality construction. Mortise and tenon joinery ensures durability, making it a desk that can be passed down generations. | [Legare](https://www.legarefurniture.com/) |
-| IKEA Numerar Countertop with Steel Legs | $$ | $250 | Cost-effective and durable, the IKEA Numerar butcher block countertop offers a solid work surface backed by a 25-year warranty. Sturdy steel legs ensure stability. | [IKEA](https://www.ikea.com/us/en/) |
-| DIY BIFL Desk (Solid Core Door + Adjustable Legs) | $$ | $200 | Repurposing a solid core door provides a durable, budget-friendly work surface. Combine with adjustable legs like the IKEA Idasen for a stable and customizable desk setup. | No link available |
+| Product Name                           | Price Tier | Price (USD) | Why It's BuyWhoa                                                                                                                                                                | Link to Buy                                                                                                  |
+|---------------------------------------|------------|-------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------|
+| Used Steel Tanker Desk (generic)      | $          | Varies      | A favorite on Reddit’s r/BuyItForLife. Heavy-gauge steel construction from mid-century office supplies, often found in thrift stores/auctions. They can outlive multiple owners.                                        | Used local find; not typically sold on Amazon.                                                                |
+| HON BL Series Desk Shell              | $$         | $280        | HON is known for commercial-grade office furniture. The BL Series has a solid laminate surface and metal supports. Often seen in offices for decades without failing.                                                   | [Amazon](https://www.amazon.com/dp/B004N74O0I?tag=buywhoa-20)                                                  |
+| Vari Electric Standing Desk 48x30     | $$$        | $495        | Renowned for sturdy construction, 5-year warranty, and high-grade steel frame. The motor and lift mechanism are made to last through extensive daily use.                                                               | [Amazon](https://www.amazon.com/dp/B07VH6Z59B?tag=buywhoa-20)                                                  |
+| Fully Jarvis Bamboo Standing Desk     | $$$        | $599        | Praised on Reddit for a robust frame, easy repairs, and strong warranty. Bamboo top is durable and eco-friendly. Metal frame components are replaceable if needed.                                                       | [Amazon](https://www.amazon.com/dp/B07Y67BMRB?tag=buywhoa-20)                                                  |
+| Uplift V2 Standing Desk              | $$$$       | $700+       | A high-end sit/stand desk featuring a sturdy steel frame and a 15-year warranty on most parts. Built to handle daily height adjustments without wobbling or mechanical failures.                                        | [Amazon](https://www.amazon.com/dp/B07SL9YZG1?tag=buywhoa-20)                                                  |
+| Steelcase Migration SE / Ology Desks | $$$$       | $800+       | Steelcase is lauded for top-tier commercial office furniture. These desks are built for 24/7 use, with robust welds and high-quality components that can be serviced or replaced.                                        | [Steelcase Migration on Amazon](https://www.amazon.com/s?k=Steelcase+Migration&tag=buywhoa-20) (varies)        |
+| Herman Miller Renew Sit-to-Stand Desk | $$$$       | $1,000+     | Herman Miller’s reputation for durability carries over to its desk line. Long warranty, excellent customer support, and modular parts ensure a “buy it once” investment.                                                | [Herman Miller on Amazon](https://www.amazon.com/stores/HermanMiller/page/1C690BEA-C819-4394-A6C4-3CFC5183D019?tag=buywhoa-20) |
